# md_view

./: .gitignore  README.md  com.mdview.app.desktop  helloworld.md  install.sh  meson.build  uninstall.sh
src/: app.c  app.h  main.c  md_render.c  md_render.h  viewer.c  viewer.h
src/resources/: gresource.xml  style.css
